--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -81,7 +81,7 @@ h2, h3, h4, h5, h6{color:#333333;}
     z-index: 200;
 }
 
-#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a{    
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a{
 	color: #CCCCCC;
 }
 
@@ -92,8 +92,8 @@ h2, h3, h4, h5, h6{color:#333333;}
 }
 
 
-#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title {    
-    display: block;   
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title {
+    display: block;
     z-index: 1;
 }
 
@@ -131,8 +131,8 @@ h2, h3, h4, h5, h6{color:#333333;}
     display: block;
     font-size: 0.8em;
     margin-left: 10px;
-    padding-left: 20px; 
-	float: left;	
+    padding-left: 20px;
+	float: left;
 	margin-right: 10px;
 	margin-bottom: 7px;
 }
@@ -150,15 +150,15 @@ h2, h3, h4, h5, h6{color:#333333;}
 }
 
 #views_slideshow_cycle_main_home_page-block .views-field-created{
-    background: url("../images/date.png") no-repeat scroll 0 0 transparent;   
+    background: url("../images/date.png") no-repeat scroll 0 0 transparent;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-field-term-node-tid{
-    background: url("../images/tag.png") no-repeat scroll 0 0 transparent;    
+    background: url("../images/tag.png") no-repeat scroll 0 0 transparent;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-field-name{
-	background: url("../images/author.png") no-repeat scroll 0 0 transparent;   
+	background: url("../images/author.png") no-repeat scroll 0 0 transparent;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame{
@@ -195,7 +195,7 @@ h2, h3, h4, h5, h6{color:#333333;}
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
     height: auto;
     margin-left: -23px;
-    width: 92px;	
+    width: 92px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
@@ -207,7 +207,7 @@ h2, h3, h4, h5, h6{color:#333333;}
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item.active,  .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item:hover{
-    background: none repeat scroll 0 0 #333333;    
+    background: none repeat scroll 0 0 #333333;
 	opacity: 1;
 }
 
@@ -218,7 +218,7 @@ h2, h3, h4, h5, h6{color:#333333;}
     width: 50px;
 }
 
-#views_slideshow_pager_field_item_bottom_home_page-block_4 .views-field-field-image .views-content-field-image {   
+#views_slideshow_pager_field_item_bottom_home_page-block_4 .views-field-field-image .views-content-field-image {
     width: 51px;
 }
 
@@ -447,3 +447,21 @@ pre{overflow:hidden;width:90%;}
 .view-images-gallery .views-row h3{border-bottom:1px dashed #DDDDDD;font-size:14px;margin-bottom:26px;margin-top:6px;padding-bottom:13px;text-align:center;}
 
 #block-views-calendar-block-1, #block-views-calendar-block-2{float:left;margin-right:0px;margin-top:0px;padding-bottom:6px;width:100%;}
+
+/* IMAGE FIELD CAPTION
+--------------------------------------------------------------------------*/
+.view blockquote.image-field-caption, .node-teaser blockquote.image-field-caption {
+    display: none;
+    visibility: hidden;
+}
+
+.page-node .node-article .content .field-type-image blockquote.image-field-caption {
+    float: left;
+    max-width: 380px;
+    margin: 5px 0 0;
+}
+
+blockquote.image-field-caption p {
+    line-height: 1.5em;
+    margin: 0 0 0.6em;
+}
