--- a/sites/all/themes/fredtwentytwo/css/screen-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/screen-layout.css
@@ -52,15 +52,15 @@ body.front h1 {
     display: block;
 }
 
-#mobile-logo {
-    display: none;
+#logo {
+    margin-top: 10px;
+    width: 700px;
+    text-align: center;
+    float: left;
 }
 
-#logo {
-    display: block;
-    margin-left: 18px;
-    margin-top: 0px;
-    min-height: 73px;
+#logo img {
+    width: 700px;
 }
 
 #page-wrapper {
