--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -10,9 +10,14 @@ h2, h3, h4, h5, h6{color:#333333;}
 
 #block-user-login{display:none;}
 
-#mobile-logo{display:block;margin-bottom:9px;padding-top:13px;text-align:center;}
+#logo {
+    margin-top: 10px;
+    width: 100%;
+}
 
-#logo{margin-left:0;margin-top:10px;display:none;}
+#logo img {
+    width: 100%;
+}
 
 #page-wrapper{width:100%;min-width:320px;max-width:320px;}
 
