--- a/sites/all/themes/fredtwentytwo/css/tablet-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/tablet-layout.css
@@ -6,9 +6,14 @@ body.front h1{display:none;}
 
 #block-user-login{display:none;}
 
-#mobile-logo{display:block;float:left;margin-bottom:9px;margin-left:13px;padding-top:13px;text-align:center;}
+#logo {
+    margin-top: 10px;
+    width: 100%;
+}
 
-#logo{margin-left:0;margin-top:10px;display:none;}
+#logo img {
+    max-width: 700px;
+}
 
 #page-wrapper{max-width:768px;min-width:768px;width:100%;}
 
