--- a/sites/all/themes/fredtwentytwo/css/pages.css
+++ b/sites/all/themes/fredtwentytwo/css/pages.css
@@ -1,115 +1,182 @@
-body{margin:0;padding:0;}
+body {
+    margin: 0;
+    padding: 0;
+}
 
-#page-wrapper{}
+#page-wrapper {
+}
 
-#page{}
+#page {
+}
 
 #skip-link a,
+#skip-link a:visited {
+    display: block;
+    width: 100%;
+    padding: 2px 0 3px 0;
+    text-align: center;
+    background-color: #666;
+    color: #fff;
+}
 
-#skip-link a:visited{display:block;width:100%;padding:2px 0 3px 0;text-align:center;background-color:#666;color:#fff;}
+#header {
+    background: #fff;
+}
 
-#header{background:#fff;}
+#header .section {
+}
 
-#header .section{}
+#logo {
+    float: left;
+    margin: -20px 0px 5px 0px;
+    padding: 0;
+}
 
-#logo{float:left;margin:-20px 0px 5px 0px;padding:0;}
+#logo img {
+    vertical-align: bottom;
+}
 
-#logo img{vertical-align:bottom;}
-
-#name-and-slogan{float:left;}
+#name-and-slogan {
+    float: left;
+}
 
 h1#site-name,
-
-div#site-name{margin:0;font-size:2em;line-height:1.5em;}
+div#site-name {
+    margin: 0;
+    font-size: 2em;
+    line-height: 1.5em;
+}
 
 #site-name a:link,
-
-#site-name a:visited{color:#000;text-decoration:none;}
+#site-name a:visited {
+    color: #000;
+    text-decoration: none;
+}
 
 #site-name a:hover,
+#site-name a:focus {
+    text-decoration: underline;
+}
 
-#site-name a:focus{text-decoration:underline;}
+#site-slogan {
+}
 
-#site-slogan{}
+.region-header {
+    background: #fff;
+    clear: both;
+}
 
-.region-header{background:#fff;clear:both;}
+#main-wrapper {
+}
 
-#main-wrapper{}
+#main {
+}
 
-#main{}
+#content {
+}
 
-#content{}
+#content .section {
+}
 
-#content .section{}
+.region-highlighted {
+}
 
-.region-highlighted{}
-
-.breadcrumb{padding-bottom:0;}
+.breadcrumb {
+    padding-bottom: 0;
+}
 
 h1.title,
-
 h2.node-title,
-
 h2.block-title,
-
 h2.title,
-
 h2.comment-form,
+h3.title {
+    margin: 0;
+}
 
-h3.title{margin:0;}
+tr.even {
+}
 
-tr.even{}
+tr.odd {
+}
 
-tr.odd{}
+div.messages {
+    margin: 1.5em 0;
+}
 
-div.messages{margin:1.5em 0;}
+div.messages ul {
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
-div.messages ul{margin-top:0;margin-bottom:0;}
-
-div.status{}
+div.status {
+}
 
 div.warning,
-
-tr.warning{}
+tr.warning {
+}
 
 div.error,
+tr.error {
+}
 
-tr.error{}
+.error {
+}
 
-.error{}
+.warning {
+}
 
-.warning{}
+div.tabs {
+}
 
-div.tabs{}
+.region-help {
+}
 
-.region-help{}
+.more-help-link {
+}
 
-.more-help-link{}
+.region-content {
+}
 
-.region-content{}
+ul.links {
+}
 
-ul.links{}
+ul.links.inline {
+    display: block;
+}
 
-ul.links.inline{display:block;}
+ul.links li {
+    padding: 0 1em 0 0;
+}
 
-ul.links li{padding:0 1em 0 0;}
+.item-list .pager {
+    padding: 0;
+}
 
-.item-list .pager{padding:0;}
+.item-list .pager li {
+    padding: 0 0.5em;
+}
 
-.item-list .pager li{padding:0 0.5em;}
+.feed-icon {
+}
 
-.feed-icon{}
+.more-link {
+}
 
-.more-link{}
+.region-sidebar-first {
+}
 
-.region-sidebar-first{}
+.region-sidebar-first .section {
+}
 
-.region-sidebar-first .section{}
+.region-sidebar-second {
+}
 
-.region-sidebar-second{}
+.region-sidebar-second .section {
+}
 
-.region-sidebar-second .section{}
+.region-footer {
+}
 
-.region-footer{}
-
-.region-bottom{}
+.region-bottom {
+}
