--- a/sites/lakeoconeenews.us/themes/lakeoconeenews/css/screen-layout.css
+++ b/sites/lakeoconeenews.us/themes/lakeoconeenews/css/screen-layout.css
@@ -54,13 +54,12 @@ body.front h1 {
 
 #logo {
     margin-top: 10px;
-    width: 700px;
     text-align: center;
     float: left;
 }
 
 #logo img {
-    width: 700px;
+    width: 100%;
 }
 
 #page-wrapper {
