--- a/sites/beacononlinenews.com/themes/beacononlinenews/css/mobile-landscape-layout.css
+++ b/sites/beacononlinenews.com/themes/beacononlinenews/css/mobile-landscape-layout.css
@@ -175,10 +175,9 @@ body.front h1 {
     background: none repeat-x scroll 0 bottom #333333;
     color: #FFFFFF;
     position: absolute;
-    top: 174px;
-    width: 459px;
+    top: 296px;
+    width: 460px;
     z-index: 200;
-    padding-bottom: 6px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a {
@@ -257,6 +256,21 @@ body.front h1 {
     height: 295px !important;
 }
 
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-field-rate,
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-comment-count {
+    display: block;
+    visibility: visible;
+}
+
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-field-rate .field-content {
+    margin-top: 0 !important;
+    float: left;
+}
+
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .field-content .form-item {
+    margin: 0 !important;
+}
+
 .bottom-shadow {
     background: url("../images/bottom-shadow.png") repeat-x scroll 0 0 transparent;
     bottom: -6px;
@@ -269,19 +283,16 @@ body.front h1 {
 
 .views_slideshow_cycle_main {
     background: none repeat scroll 0 0 #333333;
-    height: 306px;
-    width: 458px;
+    height: 520px;
+    width: 460px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
-    background: none repeat scroll 0 0 #555555;
-    border: medium none;
-    height: 46px;
-    margin-top: -178px;
-    position: absolute;
-    right: 11px;
-    width: 234px;
-    z-index: 500;
+    top: 454px;
+    left: 50px;
+    width: 400px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
