--- a/sites/beacononlinenews.com/themes/beacononlinenews/css/mobile-portrait-layout.css
+++ b/sites/beacononlinenews.com/themes/beacononlinenews/css/mobile-portrait-layout.css
@@ -182,14 +182,20 @@ h2, h3, h4, h5, h6 {
     background: none repeat-x scroll 0 bottom #333333;
     color: #FFFFFF;
     position: absolute;
-    top: 150px;
-    width: 299px;
+    top: 250px;
+    left: 0;
+    width: 300px;
     z-index: 200;
-    padding-bottom: 6px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a {
     color: #CCCCCC;
+}
+
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-field-rate,
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-comment-count {
+    display: none;
+    visibility: hidden;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title {
@@ -203,7 +209,8 @@ h2, h3, h4, h5, h6 {
     margin-left: 10px;
     margin-right: 10px;
     padding-bottom: 2px;
-    padding-top: 8px;
+    padding-top: 0;
+    margin-top: 0 !important;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title h2 a {
@@ -276,19 +283,19 @@ h2, h3, h4, h5, h6 {
 
 .views_slideshow_cycle_main {
     background: none repeat scroll 0 0 #333333;
-    height: 336px;
+    height: 490px;
     width: 301px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
-    background: none repeat scroll 0 0 #555555;
-    border: medium none;
-    height: 48px;
+    height: 60px;
     margin-top: 0;
-    position: relative;
-    right: 0;
-    width: 301px;
+    left: 0;
+    width: 300px;
     z-index: 500;
+    position: absolute;
+    top: 430px;
+    overflow: hidden;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
@@ -299,14 +306,10 @@ h2, h3, h4, h5, h6 {
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
     display: inline-block;
-    margin-right: -3px;
+    margin-right: -6px;
     overflow: hidden;
-    padding: 5px 4px 9px 5px;
+    padding: 0 4px 0 5px;
     opacity: 0.4;
-    -moz-transition: opacity 0.5s ease-out;
-    -o-transition: opacity 0.5s ease-out;
-    -webkit-transition: opacity 0.5s ease-out;
-    transition: opacity 0.5s ease-out;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item.active, .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item:hover {
@@ -327,6 +330,10 @@ h2, h3, h4, h5, h6 {
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image {
     margin-left: -23px;
+}
+
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image .field-content {
+    margin-top: 0 !important;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item .views-field-field-image img {
