--- a/sites/indyrepnews.com/*themes*/news_center/css/fields.css
+++ b/sites/indyrepnews.com/*themes*/news_center/css/fields.css
@@ -1,41 +1,62 @@
-.field{}
+.field {
+}
 
-.field-type-text{}
+.field-type-text {
+}
 
-.field-type-text-long{}
+.field-type-text-long {
+}
 
-.field-type-text-with-summary{}
+.field-type-text-with-summary {
+}
 
-.field-type-image{}
+.field-type-image {
+}
 
-.field-type-file{}
+.field-type-file {
+}
 
-.field-type-taxonomy-term-reference{}
+.field-type-taxonomy-term-reference {
+}
 
-.field-type-number-integer{}
+.field-type-number-integer {
+}
 
-.field-type-number-decimal{}
+.field-type-number-decimal {
+}
 
-.field-type-number-float{}
+.field-type-number-float {
+}
 
-.field-type-list-text{}
+.field-type-list-text {
+}
 
-.field-type-list-boolean{}
+.field-type-list-boolean {
+}
 
-.field-type-list-integer{}
+.field-type-list-integer {
+}
 
-.field-type-list-float{}
+.field-type-list-float {
+}
 
-.field-type-datetime{}
+.field-type-datetime {
+}
 
-.field-type-node-reference{}
+.field-type-node-reference {
+}
 
-.field-type-user-reference{}
+.field-type-user-reference {
+}
 
-.field-name-body{}
+.field-name-body {
+}
 
-.field-name-field-image{}
+.field-name-field-image {
+}
 
-.field-name-field-tags{}
+.field-name-field-tags {
+}
 
-.field-name-field-FIELDNAME{}
+.field-name-field-FIELDNAME {
+}
