--- a/sites/indyrepnews.com/*themes*/news_center/css/page-backgrounds.css
+++ b/sites/indyrepnews.com/*themes*/news_center/css/page-backgrounds.css
@@ -1,15 +1,23 @@
-body{}
+body {
+}
 
-#page-wrapper{}
+#page-wrapper {
+}
 
-#page{}
+#page {
+}
 
-#header{}
+#header {
+}
 
-#header .section{}
+#header .section {
+}
 
-#main-wrapper{}
+#main-wrapper {
+}
 
-#main{}
+#main {
+}
 
-.region-footer{}
+.region-footer {
+}
