--- a/sites/beacononlinenews.com/themes/beacononlinenews/css/mobile-landscape-layout.css
+++ b/sites/beacononlinenews.com/themes/beacononlinenews/css/mobile-landscape-layout.css
@@ -289,10 +289,15 @@ body.front h1 {
 
 .view-id-home_page .views-slideshow-controls-bottom {
     top: 454px;
-    left: 50px;
+    left: 0;
     width: 400px;
+}
+
+.view-id-home_page .views-slideshow-controls-bottom #widget_pager_bottom_home_page-block {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    width: 476px;
+    margin: 0 12px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
