--- a/sites/beacononlinenews.com/themes/beacononlinenews/css/screen-layout.css
+++ b/sites/beacononlinenews.com/themes/beacononlinenews/css/screen-layout.css
@@ -346,6 +346,13 @@ body.front h1 {
     top: 420px;
 }
 
+.view-id-home_page .views-slideshow-controls-bottom #widget_pager_bottom_home_page-block {
+    display: flex;
+    justify-content: space-between;
+    width: 476px;
+    margin: 0 12px;
+}
+
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
     display: inline-block;
     margin-right: -3px;
