--- a/sites/beacononlinenews.com/themes/beacononlinenews/css/tablet-layout.css
+++ b/sites/beacononlinenews.com/themes/beacononlinenews/css/tablet-layout.css
@@ -287,7 +287,7 @@ body.front h1 {
     height: 60px;
     margin-top: 0;
     position: absolute;
-    left: 84px;
+    left: 0;
     width: 700px;
     z-index: 200;
     top: 464px;
