--- a/sites/all/themes/fredtwentytwo/css/screen-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/screen-layout.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:600,300,400,700);
 
 body {
-    background: url("../images/body.png") repeat-x #CBCBCB;
+    /*background: url("../images/body.png") repeat-x #CBCBCB;*/
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -24,20 +24,6 @@ ul.menu li {
     list-style: none outside none;
     margin: 0;
     padding: 0;
-}
-
-.content .menu li a {
-    color: #FFF;
-    text-decoration: none;
-    padding: 8px 10px 5px;
-    font-size: 14px;
-    font-weight: 600;
-    text-transform: uppercase;
-    border-right: 1px solid #242424;
-}
-
-.content .menu li a:hover {
-    background: none repeat scroll 0 0 #12AEFF;
 }
 
 .region-top-advertisement #block-menu-menu-secondary-menu {
