--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -70,7 +70,7 @@ h2, h3, h4, h5, h6 {
     width: 300px;
 }
 
-#region-top-area {
+.region-top-area {
     background: none;
     border: none;
     float: none;
