--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -188,6 +188,7 @@ h2, h3, h4, h5, h6 {
 /* SlideShow Block Styles */
 #block-views-home-page-block {
     position: relative;
+    margin-bottom: 1em;
 }
 
 .image-show {
