--- a/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/mobile-portrait-layout.css
@@ -93,7 +93,7 @@ h2, h3, h4, h5, h6 {
     float: none;
     margin-left: 0;
     margin-right: 0;
-    margin-top: -40px !important;
+    margin-top: 0 !important;
     padding: 15px 0 0;
     position: relative;
     width: 100%;
