news_center theme

--- a/sites/all/themes/news_center/css/tablet-layout.css
+++ b/sites/all/themes/news_center/css/tablet-layout.css
@@ -305,7 +305,7 @@ body.front h1 {
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
     display: inline-block;
-    margin-right: -3px;
+    margin-right: 0;
     padding: 0;
 }
 
