--- a/sites/msgr.com/themes/msgr/css/tablet-layout.css
+++ b/sites/msgr.com/themes/msgr/css/tablet-layout.css
@@ -19,14 +19,15 @@ body.front h1 {
     display: none;
 }
 
-#mobile-logo {
+/* removing mobile logo - main logo now resizes */
+/* #mobile-logo {
     display: block;
     float: left;
     margin-bottom: 9px;
     margin-left: 13px;
     padding-top: 13px;
     text-align: center;
-}
+} */
 
 #logo {
     margin-top: 10px;
