news_center theme

--- a/sites/all/themes/news_center/css/screen-layout.css
+++ b/sites/all/themes/news_center/css/screen-layout.css
@@ -345,7 +345,7 @@ body.front h1 {
  * Articles Blocks
  */
 
-.region-content0 .block.odd {
+.region-content0 .block.even {
     width: 462px;
     float: left;
 }
