--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -3,5 +3,14 @@
 }
 
 #page {
-    margin: 1em;
+    margin: 2em;
+}
+
+/* logo */
+#logo {
+    width: 100%;
+}
+
+#logo img {
+    width: 100%;
 }
