--- a/sites/all/themes/news_center/css/reset.css
+++ b/sites/all/themes/news_center/css/reset.css
@@ -53,10 +53,11 @@ ul.menu {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 ul.menu li {
-    float: left;
 }
 
 ul.menu li a {
