--- a/sites/all/themes/news_center/css/simpleads.css
+++ b/sites/all/themes/news_center/css/simpleads.css
@@ -4,6 +4,7 @@
 .block-simpleads .adslist > div > div {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .simplead-container img {
